apps/ghost/overlays/staging/patch-ghost-probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
spec:
  template:
    spec:
      containers:
      - name: ghost
        readinessProbe:
          $patch: replace
          httpGet:
            path: /blog/
            port: 2368
            scheme: HTTP
            httpHeaders:
            - name: Host
              value: staging.example.com
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 6
        livenessProbe:
          $patch: replace
          httpGet:
            path: /blog/
            port: 2368
            scheme: HTTP
            httpHeaders:
            - name: Host
              value: staging.example.com
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 6
